--- a/2. HTML/8_Form_labels.html
+++ b/2. HTML/8_Form_labels.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     
-    <form action="">
+    <form action="https://www.google.com", method="get"> 
         <label for="emailtag">Email: </label>
-        <input type="email" name="" id="emailtag">
+        <input type="email" name="useremail" placeholder="Enter you Email" id="emailtag">
 
         <label for="passtag">Password</label>
-        <input type="password" name="" id="passtag">
+        <input type="password" name="password" placeholder="Password" id="passtag">
 
+        <input type="submit" value="Submit">
         
     </form>
 
